--- a/style.css
+++ b/style.css
@@ -65,6 +65,12 @@ button.btn_assoss{
 	visibility: visible;
 }
 
+button.btn_assoss:hover{
+	opacity: 0.8;
+	border-radius: 20px;
+	box-shadow: 10px;
+}
+
 input.nom{
 	position: absolute;
 	left: 470px;
@@ -116,6 +122,10 @@ button.valider{
 	font-weight: bold;
 }
 
+button.valider:hover{
+	border-radius: 17px;
+}
+
 img.chargement{
 	position: absolute;
 	left: 550px;
@@ -143,5 +153,35 @@ button.btn_planning{
 	font-family: verdana;
 	width: 280px;
 	height: 60px;
+	border: 4px solid black;
+	border-radius: 15px;
 
+}
+
+div.essai{
+	position: absolute;
+	left: 500px;
+	top: 400px;
+}
+
+button.cours{
+	position: absolute;
+	top: 260px;
+	left: 510px;
+	background-color: brown;
+	font-size: 15pt;
+	font-weight: bold;
+	font-family: arial;
+	width: 280px;
+	height: 100px;
+	border: 8px solid darkred;
+	border-radius: 15px;
+	text-align: center;
+	visibility: visible;
+}
+
+button.cours:hover{
+	opacity: 0.8;
+	border-radius: 20px;
+	box-shadow: 10px;
 }
